# python_template

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  DEVELOPING.md  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: python.yaml
