[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = "Python template."
license = { text = "Proprietary" }
readme = "README.md"
requires-python = ">=3.13,<4.0"
authors = [{ name = "Ruben Purdy", email = "ruben.purdy@gmail.com" }]
dependencies = []

[project.urls]
repository = "https://github.com/rbnprdy/python_template"

[dependency-groups]
dev = [
  "ruff>=0.11.13",
  "mypy>=1.16.0",
  "pre-commit>=4.2.0",
  "pytest>=8.4.0", 
  "coverage>=7.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_slug }}"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "INT", "N", "PT", "RUF", "W"]
ignore = [
  # ignore various overly-strict docstring errors
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D203",
  "D204",
  "D210",
  "D213",
  "D215",
  "D400",
  "D401",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
  "E741",
  # ignore errors cause by formatting
  "E203",
  "E501",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.docformatter]
pre-summary-space = false
wrap-summaries = 88
wrap-descriptions = 88

[tool.mypy]
python_version = "3.13"
platform = "linux"
check_untyped_defs = true

[tool.coverage.run]
source = ["src/{{ cookiecutter.project_slug }}"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]
